Refactoring a lot. Fixes #178. Fixes #177. Fixes #175. Fixes #172. Fixes #173. Fixes #171. Fixes #170. Fixes #169.

--- a/ui/src/app/components/discussion-card/discussion-card.component.scss
+++ b/ui/src/app/components/discussion-card/discussion-card.component.scss
@@ -11,3 +11,12 @@
   padding: 0.5rem 1.25rem;
   margin-bottom: 10px;
 }
+
+h1 {
+  font-size: 2.6vw;
+}
+
+.progress {
+  display: inline-flex;
+  width: 85%;
+}
