--- a/ui/src/app/components/navbar/navbar.component.scss
+++ b/ui/src/app/components/navbar/navbar.component.scss
@@ -1,42 +1,30 @@
-.fa {
-  vertical-align: inherit;
-}
+// .fa {
+//   vertical-align: inherit;
+// }
 
-.search-box {
-  max-width: 180px;
-}
+// .search-box {
+//   max-width: 180px;
+// }
 
-.messages-dropdown {
-  width: 435px;
-}
+// .messages-dropdown {
+//   width: 435px;
+// }
 
-.user-dropdown {
-  top: 50px;
-  left: -100px;
-}
+// .user-dropdown {
+//   top: 50px;
+//   left: -100px;
+// }
 
-.navbar-label {
-  font-size: 10px;
-  padding: 0 3px;
-  line-height: 10px;
-  position: absolute;
-  display: block;
-}
+// .nav-item.dropdown {
+//   margin-left: .6rem;
+// }
 
-.nav-item {
-  //padding-top: .2rem;
-}
+// @media (min-width: 544px) {
+//   .form-inline .form-control {
+//     width: 350px;
+//   }
+// }
 
-.nav-item.dropdown {
-  margin-left: .6rem;
-}
-
-@media (min-width: 544px) {
-  .form-inline .form-control {
-    width: 350px;
-  }
-}
-
-.btn-primary-outline {
-  border-color: #433a3c;
-}
+// .btn-primary-outline {
+//   border-color: #433a3c;
+// }
