--- a/ui/src/app/components/comment/comment.component.html
+++ b/ui/src/app/components/comment/comment.component.html
@@ -37,25 +37,25 @@
     </div>
   </div>
   <small *ngIf="!showReply && !showEdit">
-    <ul class="list-inline">
+    <ul class="list-inline font-weight-bold text-muted">
       <span *ngIf="!comment.deleted">
-      <li *ngIf="userService.getUser().id != comment.user.id" role="button" class="list-inline-item" (click)="toggleShowVoteSlider()">
-        <i class="fa fa-fw fa-star-half-o" placement="bottom" tooltip="Vote"></i>
+      <li *ngIf="userService.getUser().id != comment.user.id" role="button" class="list-inline-item pointer" (click)="toggleShowVoteSlider()">
+        vote
       </li>
-      <li role="button" class="list-inline-item" (click)="toggleShowReply()">
-        <i class="fa fa-fw fa-reply" placement="bottom" tooltip="Reply"></i>
+      <li role="button" class="list-inline-item pointer" (click)="toggleShowReply()">
+        reply
       </li>
-      <li role="button" *ngIf="editable" (click)="toggleShowEdit()" class="list-inline-item">
-        <i class="fa fa-fw fa-edit" placement="bottom" tooltip="Edit"></i>
+      <li role="button" *ngIf="editable" (click)="toggleShowEdit()" class="list-inline-item pointer">
+        edit
       </li>
-      <li role="button" *ngIf="editable || deleteable" (click)="deleteComment()" class="list-inline-item">
-        <i class="fa fa-fw fa-remove" placement="bottom" tooltip="Delete"></i>
+      <li role="button" *ngIf="editable || deleteable" (click)="deleteComment()" class="list-inline-item pointer">
+        delete
       </li>
       </span>
-      <li *ngIf="comment.parentId" role="button" class="list-inline-item">
+      <li *ngIf="comment.parentId" role="button" class="ml-1 list-inline-item">
         <a class="link-unstyled" [routerLink]="['/discussion', comment.discussionId, 'comment', comment.parentId]"><i class="fa fa-fw fa-level-up" placement="bottom" tooltip="View Parent"></i></a>
       </li>
-      <li *ngIf="!comment.parentId" role="button" class="list-inline-item">
+      <li *ngIf="!comment.parentId" role="button" class="ml-1 list-inline-item">
         <a class="link-unstyled" [routerLink]="['/discussion', comment.discussionId]"><i class="fa fa-fw fa-level-up" placement="bottom" tooltip="View Discussion"></i></a>
       </li>
       <li *ngIf="comment.id != comment.topParentId || comment.parentId == null" role="button" class="list-inline-item">
