--- a/ui/src/app/components/community/community.component.html
+++ b/ui/src/app/components/community/community.component.html
@@ -1,8 +1,7 @@
- <div>
-  <div class="row">
+<div>
+  <div class="row mb-2">
     <div class="col-xs-12" [class.col-md-10]="!editing" [class.col-md-12]="editing">
-      <app-community-card *ngIf="community" [community]="community"
-        [(editing)]="editing"></app-community-card>
+      <app-community-card *ngIf="community" [community]="community" [(editing)]="editing"></app-community-card>
     </div>
     <div *ngIf="!editing" class="col-xs-12 col-md-2">
       <app-discussion-card-view-type-select [(viewType)]="viewType"></app-discussion-card-view-type-select>
@@ -15,11 +14,11 @@
         <app-discussion-card [viewType]="viewType" *ngFor="let discussion of discussions" [discussion]="discussion "></app-discussion-card>
       </div>
       <div *ngIf="isCard()">
-        <div class="row">
-          <ngx-masonry [options]="{gutter: 10, initLayout: true, transitionDuration: '0.4s'}" [useImagesLoaded]="true" [updateLayout]="updateMasonryLayout">
-            <ngx-masonry-item class="masonry-item" *ngFor="let discussion of discussions">
+        <div class="col-xs-12">
+          <ngx-masonry [options]="{gutter: 10, transitionDuration: '0.2s'}" [useImagesLoaded]="true">
+            <ngxMasonryItem class="masonry-item mb-2" *ngFor="let discussion of discussions">
               <app-discussion-card [viewType]="viewType" [discussion]="discussion "></app-discussion-card>
-            </ngx-masonry-item>
+            </ngxMasonryItem>
           </ngx-masonry>
         </div>
       </div>
