--- a/ui/src/app/components/discussion/discussion.component.html
+++ b/ui/src/app/components/discussion/discussion.component.html
@@ -11,7 +11,7 @@
   </div>
   <div class="col-xs-12 col-lg-2">
     <div class="card">
-      <div role="button" class="card-header" (click)="toggleUsersCollapsed()">
+      <div role="button" class="card-header pointer" (click)="toggleUsersCollapsed()">
         <i class="fa fa-fw fa-user"></i>Users
       </div>
       <ul *ngIf="!usersCollapsed" class="list-group">
@@ -22,7 +22,7 @@
     </div>
   </div>
 </div>
-<nav *ngIf="!topParentId && !clearTopReply && !isReplying && !discussion?.deleted && !editing" class="navbar fixed-bottom navbar-light bg-light">
+<nav *ngIf="!topParentId && !clearTopReply && !isReplying && !discussion?.deleted && !editing" class="navbar fixed-bottom navbar-dark bg-dark">
   <div class="row col-sm-12">
     <app-markdown-edit class="col-sm-10 col-md-11" (textEvent)="setTopReply($event)" [rows]="1"></app-markdown-edit>
     <button (click)="sendTopReply()" class="btn btn-outline-primary col-sm-2 col-md-1 special-nav-button" type="submit">Send</button>
