--- a/ui/src/app/styles/extras.scss
+++ b/ui/src/app/styles/extras.scss
@@ -1,93 +1,97 @@
-.fa {
-  vertical-align: middle
+.pointer {
+  cursor: pointer;
 }
 
-.fa-center {
-  display: flex !important;
-  align-items: center;
-  justify-content: center;
-}
-
-.link-unstyled {
+.link-unstyled, .link-unstyled:link {
   color: inherit;
   text-decoration: inherit;
 }
 
-.list-inline {
-  margin-bottom: 0px;
-}
-
-.card-columns {
-  -webkit-column-count: 3;
-  -moz-column-count: 3;
-  column-count: 3;
-  -webkit-column-gap: 1.25rem;
-  -moz-column-gap: 1.25rem;
-  column-gap: 1.25rem;
-}
-
-.card {
-  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
-  transition: all 0.3s cubic-bezier(.25, .8, .25, 1);
-}
-
-// Disable animations for now
-// app-discussion-card,
-// app-community-card,
-// app-sidebar
-// {
-//   .card:hover {
-//     box-shadow: 0 7px 14px rgba(0, 0, 0, 0.25), 0 5px 5px rgba(0, 0, 0, 0.22);
-//   }
+// .fa {
+//   vertical-align: middle
 // }
 
-.label {
-  vertical-align: middle;
-}
+// .fa-center {
+//   display: flex !important;
+//   align-items: center;
+//   justify-content: center;
+// }
 
-.truncate {
-  display: inline-block;
-  /* or inline-block */
-  text-overflow: ellipsis;
-  word-wrap: break-word;
-  overflow: hidden;
-  max-height: inherit;
-  line-height: inherit;
-}
+// .list-inline {
+//   margin-bottom: 0px;
+// }
 
-blockquote {
-  margin: 0 10px .5rem;
-  padding-left: 10px;
-  border-left: 3px solid #ccc;
-}
+// .card-columns {
+//   -webkit-column-count: 3;
+//   -moz-column-count: 3;
+//   column-count: 3;
+//   -webkit-column-gap: 1.25rem;
+//   -moz-column-gap: 1.25rem;
+//   column-gap: 1.25rem;
+// }
 
-.dropdown-menu {
-  box-shadow: 0 1px 4px rgba(0, 0, 0, .3);
-}
+// .card {
+//   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+//   transition: all 0.3s cubic-bezier(.25, .8, .25, 1);
+// }
 
-.dropdown-menu>li>a {
-  display: block;
-  padding: 3px 20px;
-  clear: both;
-  font-weight: 400;
-  line-height: 1.42857143;
-  // color: #fbfbfb;
-  white-space: nowrap;
-}
+// // Disable animations for now
+// // app-discussion-card,
+// // app-community-card,
+// // app-sidebar
+// // {
+// //   .card:hover {
+// //     box-shadow: 0 7px 14px rgba(0, 0, 0, 0.25), 0 5px 5px rgba(0, 0, 0, 0.22);
+// //   }
+// // }
 
-.dropdown-menu>li>div>div>p {
-  margin-bottom: .2rem;
-  white-space: normal;
-}
+// .label {
+//   vertical-align: middle;
+// }
 
-.dropdown-menu>.active>a,
-.dropdown-menu>.active>a:focus,
-.dropdown-menu>.active>a:hover {
-  color: #fff;
-  text-decoration: none;
-  background-color: #337ab7;
-  outline: 0;
-}
+// .truncate {
+//   display: inline-block;
+//   /* or inline-block */
+//   text-overflow: ellipsis;
+//   word-wrap: break-word;
+//   overflow: hidden;
+//   max-height: inherit;
+//   line-height: inherit;
+// }
+
+// blockquote {
+//   margin: 0 10px .5rem;
+//   padding-left: 10px;
+//   border-left: 3px solid #ccc;
+// }
+
+// .dropdown-menu {
+//   box-shadow: 0 1px 4px rgba(0, 0, 0, .3);
+// }
+
+// .dropdown-menu>li>a {
+//   display: block;
+//   padding: 3px 20px;
+//   clear: both;
+//   font-weight: 400;
+//   line-height: 1.42857143;
+//   // color: #fbfbfb;
+//   white-space: nowrap;
+// }
+
+// .dropdown-menu>li>div>div>p {
+//   margin-bottom: .2rem;
+//   white-space: normal;
+// }
+
+// .dropdown-menu>.active>a,
+// .dropdown-menu>.active>a:focus,
+// .dropdown-menu>.active>a:hover {
+//   color: #fff;
+//   text-decoration: none;
+//   background-color: #337ab7;
+//   outline: 0;
+// }
 
 .card-title,
 .card-text,
@@ -95,83 +99,45 @@ blockquote {
   margin-bottom: .1rem !important;
 }
 
-.ng-pristine.ng-invalid {
-  box-shadow: none;
-}
-
-.btn {
-  box-shadow: 1px 1px 4px rgba(0, 0, 0, 0.4);
-  -webkit-transition: all 0.4s;
-  -o-transition: all 0.4s;
-  transition: all 0.4s;
-}
-
-.modal-content {
-  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.5);
-}
-
-a {
-  transition: all 0.2s;
-}
-
-// List group within cards
-.card {
-  .list-group {
-    margin-bottom: 0;
-  }
-  .list-group .list-group-item {
-    border-width: 1px 0;
-  }
-  .list-group-item:first-child {
-    border-top-right-radius: 0;
-    border-top-left-radius: 0;
-  }
-  .list-group .list-group-item:last-child {
-    border-bottom: 0;
-  }
-  margin-bottom: 10px;
-}
-
-.list-group-item:last-child {
-  margin-bottom: -1px;
-}
-
-.card-heading + .list-group .list-group-item:first-child {
-  border-top-width: 0;
-}
-
-button,
-html [type="button"],
-[type="reset"],
-[type="submit"] {
-  -webkit-appearance: none !important;
-}
-
-.block {
-  display: block !important;
-}
-
-.badge {
-  padding: .5em .5em;
-}
-// .mark {
-//   background-color: #3b3b01;
+// .ng-pristine.ng-invalid {
+//   box-shadow: none;
 // }
 
-.navbar.bg-dark {
-  border: 0px;
-  border-bottom: 1px solid #282828;
-}
-// Disable expand image on hover for now
-// .expand-on-hover {
-//   transition: all .05s ease-in-out;
+
+// .modal-content {
+//   box-shadow: 0 5px 15px rgba(0, 0, 0, 0.5);
 // }
 
-// .expand-on-hover:hover {
-//   max-width: 512px;
-//   position: relative;
-//   z-index: 999;
+
+// // List group within cards
+// .card {
+//   .list-group {
+//     margin-bottom: 0;
+//   }
+//   .list-group .list-group-item {
+//     border-width: 1px 0;
+//   }
+//   .list-group-item:first-child {
+//     border-top-right-radius: 0;
+//     border-top-left-radius: 0;
+//   }
+//   .list-group .list-group-item:last-child {
+//     border-bottom: 0;
+//   }
+//   margin-bottom: 10px;
 // }
+
+// .list-group-item:last-child {
+//   margin-bottom: -1px;
+// }
+
+// .card-heading + .list-group .list-group-item:first-child {
+//   border-top-width: 0;
+// }
+
+.mark {
+  background-color: #424429;
+}
 
 .inline {
   display: inline;
@@ -183,16 +149,12 @@ ngx-masonry {
   width: 100%;
 }
 
-ngx-masonry-item, .masonry-column-sizer {
+
+.masonry-item {
   @media (min-width: 480px) {
     width: calc(32%);
   }
   @media (max-width : 480px) {
     width: calc(100%);
   }
-}
-
-img {
-  max-width: 100%;
-  height: auto;
 }
